--- a/docs/Requirements_Document/CS461_Group53_Requirements_Document.tex
+++ b/docs/Requirements_Document/CS461_Group53_Requirements_Document.tex
@@ -2,14 +2,14 @@
 \usepackage{graphicx}
 \usepackage{url}
 \usepackage{setspace}
-
+\usepackage{pgfgantt}
 
 \newcommand{\indentitem}{\setlength\itemindent{35pt}}
 
 \newcommand{\subsubsubsection}[1]{\paragraph{#1}\mbox{}\\}
-\setcounter{secnumdepth}{4}
-\setcounter{tocdepth}{4}
-
+\setcounter{secnumdepth}{5}
+\setcounter{tocdepth}{5}
+\setlength\parindent{0pt}
 
 
 \usepackage{geometry}
@@ -95,21 +95,25 @@
 \subsection{Purpose}
 The purpose of this document is to describe the requirements for the Internet of Things Weather station. It will give an overview of the project and go over its various aspects. It will then discuss assumptions and limitations for the project, and then give an in-depth description of the requirements for our finished product. This document has been created as a reference for our client and as a guide for what our final product should look like.
 \subsection{Scope}
-PHAZE is an evaporometer which measures environmental data. The device will be used to help researchers gather weather information from remote areas, such as the H.J. Andrews Forest. The device can measure temperature, humidity, albedo, and rainfall. It is also built to protect the microcontrollers from humidity. 
-\newline
-At least 20 PHAZE devices are planned to be deployed. The devices will transmit the data with LoRa radios to a server. The data from the devices will be handled by the server and will be uploaded. The data will be available in Google Drive and will be visualized in Plot.ly and the OSU's GeoViz system. 
+PHAZE is an evaporometer which measures environmental data. The device will be used to help researchers gather weather information from remote areas, such as the H.J. Andrews Forest. The device will measure temperature, humidity, albedo, and rainfall. It is also built to protect the microcontrollers from humidity. 
+
+
+At least 20 PHAZE devices are planned to be deployed. The devices will transmit the data with LoRa radios to a server. The data from the devices will be handled by the server and will be uploaded. The data will be available in Google Drive and will be visualized in the OSU GeoViz system. 
 
 \subsection{Definitions, acronyms and abbreviations}
 \begin{itemize}
-\item Evaporometer: The weather collecting device we will be building.
-\item Microcontroller: a small computer on a single circuit.
-\item LoRa: ong range, low power wireless radio.
-\item Plot.ly: a web-based data visualization and analytics tool.
-\item IoT: internet of things, the connection of devices via the Internet to transmit and receive data.
 \item Database: a collection of data stored on the Internet.
-\item SD: secure digital, a non-volatile memory card used in the Evaporometer.
-\item IDE: an integrated development environment is a software application used in software development.
+\item Evaporometer: The weather collecting device we will be building.
+\item GeoViz: A Geo-visualization hosted on a website.
 \item Google Drive: A cloud storage hosted by Google.
+\item IDE: an integrated development environment is a software application used in software development.
+\item IoT: internet of things, the connection of devices via the Internet to transmit and receive data.
+\item LoRa: long range, low power wireless radio.
+\item Microcontroller: a small computer on a single circuit.
+
+\item SD: secure digital, a non-volatile memory card used in the Evaporometer.
+
+
 \end{itemize}
 \subsection{Reference}
 Images courtesy of:
@@ -117,6 +121,7 @@ Images courtesy of:
 \item https://learn.Adafruit.com
 \item https://iotdk.intel.com
 \item https://store.open-electronics.org
+\item http://geoviz.ceoas.oregonstate.edu/
 \end{itemize}
 
 \section{Overall Description}
@@ -126,29 +131,36 @@ The parts of the project are: data collection, data transfer, and one web portal
 \newline
 \begin{figure}
  \caption{How the sensor and microcontroller connection is set.}
-\includegraphics[height=4cm]{connections.eps}
+\includegraphics{connections.eps}
 \end{figure}
+
+
+The devices are enclosed in a 3D printed enclosure and are programmed in the Arduino IDE with the sensors attached.  Each device is pre-programmed to wake up every five minutes to collect data with the installed sensors.  After data collection has finished each device will save the information onto it’s SD card before transmitting the data.  This is to ensure that data can still be retrieved after power loss or packets being dropped during transfer.
 \newline
-The devices are enclosed in a 3D printed enclosure and are programmed in the Arduino IDE with the sensors manually attached.  Each device is pre-programmed to wake up every five minutes to collect data with the installed sensors.  After data collection has finished each device will save the information onto it’s SD card before transmitting the data.  This is to ensure that data can still be retrieved after power loss or packets being dropped during transfer.
-\newline
+
 After the data is saved onto the SD card the devices will transmit all collected data to the LoRa hub.  The LoRa hub will check to make sure all collected data are transferred correctly.  Due to the environment, packets can be dropped causing the data to be corrupted.  If data is missing or corrupt the LoRa will ping the device to collect/transfer data again until a predetermined stop signal.  This will prevent the devices from continually collecting data if it’s sensors are damaged and stop the hub from asking for more data from a dead device.
 \newline
+
 Once data collection is finished the hub will begin the transfer process.  The hub will upload the data to the OPEnS Google Drive to hold all collected information via ethernet.  The data will be available in datasheets and can be easily transferred to other databases for usage.
 \newline
-We will be using the data analytics and visualization tool, Plot.ly, to visualize all of our data.  The data will used to create chart, graphs, etc. for researchers to use.  The visuals can be updated on the fly with additional data collected over time.
+
+We will be using the data analytics and visualization tool, GeoViz, to visualize all of our data.  The data will used to create geographical graph for researchers to use.  The visuals can be updated on the fly with additional data collected over time.
 \subsection{Product Functions}
-With the data up on Plot.ly researchers can view the data from anywhere in the world.  Researchers can always view the most current data by viewing the database.  If needed the researchers can travel to each device and collect the data straight from the SD card.
-\newline
+With the data up on GeoViz, researchers can view the data from anywhere in the world.  Researchers can always view the most current data by viewing the database.  If needed the researchers can travel to each device and collect the data straight from the SD card.
+
+
 Each device can be setup to accommodate various sensors and will be rechargeable via solar panels.  If a hard reset is necessary a physical reset button is attached to the device for researchers to press, versus opening up the entire enclosure.
 \subsection{User Characteristics}
-The users that will use the device are researchers. They will not interact with hardware of the device. However, they will interact with the data measured by the device. They will use the data through Google Drive, plot.ly, and OSU’s GeoViz system. 
+The users that will use the device are researchers. They will not interact with the hardware. However, they will interact with the data measured by the device. Which will be available on Google Drive and GeoViz.
 \subsection{Constraints}
-The Internet connection is a constraint for the server. If the internet connection in the server is cut off, the server will be unable to upload any data to Google Drive and plot.ly.
-\newline
+The Internet connection is a constraint for the server. If the internet connection in the server is cut off, the server will be unable to upload any data to Google Drive and the GeoViz.
+
+
 Cloud storage space is also a constraint to the project. Google Drive is the main storage of the project. Once the max capacity of Google Drive is reached, the device will be unable to store any more data. 
 \subsection {Assumptions and dependencies}
-One assumption is that the devices will be stationary once setup.  Each device need to be setup in such a location that is ideal for data collection and data transfer.  If the devices are constantly being moved we can’t guarantee that the device will perform as designed.  We hope that the only failure point of the device is the battery and the sensors getting dirty.
-\newline
+One assumption is that the devices will be stationary once setup.  Each device need to be setup in such a location that is ideal for data collection and data transfer.  If the devices are constantly being moved we can not guarantee that the device will perform as designed.  We assume that the only failure points of the device is the battery and the sensors getting dirty.
+
+
 Another assumption is that we will always have access to the network hub for our LoRa radios.  The network hub is the only viable option of transferring data out of the forest.  If the network hub is out we will need to setup our own hub, run extremely long cables through the forest, or manually collect the data by hand via the SD card.
 \section{Specifics Requirement}
 This section contains all the feature specifications of the project.
@@ -158,10 +170,10 @@ This section contains all the feature specifications of the project.
 The device will have a push button configured in case a user wants to manually restart the device.
 
 \subsubsection{Hardware interfaces}
-The evaporometer uses Adafruit Feather M0 as the main microcontroller. It is powered by a 3.7V 2000mAh lithium ion battery. It is connected to the 1 RFM95 LoRa Radio, 1 SHT31-D temperature and humidity sensor, 1 DS3231 precision RTC, 2 TSL2591 light sensor, and 1 HX711 weighing sensor. The evaporometer is connected to uxcell 0-5 kg load cell which is also connected to a rain catchment system.
+The evaporometer uses Adafruit Feather M0 as the main microcontroller. It is powered by a 3.7V 2000mAh lithium ion battery with the RFM95 LoRa Radio built-in.  Along with the Feather MO we will be using: 1 SHT31-D temperature and humidity sensor, 1 DS3231 precision RTC, 2 TSL2591 light sensor, and 1 HX711 weighing sensor. The evaporometer is connected to uxcell 0-5 kg load cell which is connected to a rain catchment system.
 
 \subsubsection{Software interfaces}
-Each microcontroller is programmed through the Arduino IDE in the C language.  Data transfer between the database is managed through JavaScript and a JSON file.
+Each microcontroller is programmed through the Arduino IDE in the C language.  Data transfer between the database is managed through JavaScript and a JSON file.  Depending on the final product we may use the PushingBox API for GET requests to push data onto Google Drive.
 
 \subsubsection{Communications interfaces}
 The evaporometer uses RFM95 LoRa Radio to transmit data to the H.J. Andrews Forest server. 
@@ -169,21 +181,23 @@ Internet connection is required to upload the data from the server to Google Dri
 
 \subsection{System Features}
 This section shows the features of the PHAZE evaporometer.
+
 \subsubsection{Data Measurement}
+
 \subsubsubsection{Introduction/Purpose of feature}
 The purpose of the feature is to measure the environment data. 
 \subsubsubsection{Stimulus / Response sequence}
 The device will automatically receive data from its surroundings using its various sensors. 
 \subsubsubsection{Associated functional requirements}
-
+The following lists are associated requirements:
 \begin{enumerate}
-\indentitem\item Temperature and Humidity Measurement
+\item Temperature and Humidity Measurement
 \newline
 The device will use the Adafruit SHT31-D Temperature and humidity sensor to gather this data.
-\indentitem\item Rainfall Measurement
+\item Rainfall Measurement
 \newline
 The device will measure rainfall with a rain catchment system made of fiberglass wick. The rain catchment system is connected to the evaporometer through uxcell load cell. The rainfall is then measured by measuring the weight of the rain catchment system with the HX711 weighing sensor.
-\indentitem\item Albedo Measurement
+\item Albedo Measurement
 \newline
 The device will have 2 disks, and one will be above the other. The disk on the top will measure the direct sunlight, and the disk on the bottom will measure the reflected sunlight. The light on each disk will be measured with the TSL2591 light sensor. Dividing the reflected sunlight by the direct sunlight gives the albedo.
 \end{enumerate}
@@ -221,7 +235,19 @@ To measure carbon dioxide, a carbon dioxide sensor can be added to the evaporome
 An anemometer an be connected to the evaporometer to measure wind speed.
 
 \section{Gantt Chart}
-\includegraphics[height=4cm]{gantt.eps}
+
+
+\begin{ganttchart}{1}{27}
+\gantttitle{2017}{9}
+\gantttitle{2018}{18} \\
+\gantttitlelist{10,11,12,1,2,3,4,5,6}{3} \\
+\ganttbar{Create Requirements}{1}{7} \\
+\ganttbar{Coding}{7}{18} \\
+\ganttbar{Initial release}{19}{20} \\
+\ganttbar{Improvements}{21}{23} \\
+\ganttbar{Final Testing}{24}{25} \\
+\end{ganttchart}
+
 
 
 
